themesfiles = \
	light-grey/main.css \
	light-grey/img/en_US.png \
	light-grey/img/es_ES.png \
	light-grey/img/fr_FR.png \
	light-grey/img/background_layout_2.gif \
	light-grey/img/new_tag.png \
	light-grey/img/vhffs-big.png \
	light-grey/img/background_layout_1.gif \
	light-grey/img/info.png \
	light-grey/img/loading.gif \
	light-grey/img/vhffs.png \
	light-grey/img/bullet.png \
	light-grey/img/background_body.png \
	light-grey/img/background_layout_3.gif




if INSTALL_PANEL

panelthemesdir = @PANELDIR@/themes
nobase_dist_panelthemes_DATA = $(themesfiles)
endif # Install panel

if INSTALL_PUBLIC
publicthemesdir = @PUBLICDIR@/themes
nobase_dist_publicthemes_DATA = $(themesfiles)
endif
