publictemplatesdir = @TEMPLATESDIR@/public
nobase_dist_publictemplates_DATA = \
	common/error.tt \
	common/pager.tt \
	content/all-groups.tt \
	content/last-groups.tt \
	content/last-users.tt \
	content/group-details.tt \
	content/groupsearch-form.tt \
	content/groupsearch-results.tt \
	content/user-details.tt \
	content/usersearch-form.tt \
	content/usersearch-results.tt \
	layouts/public.tt \
	misc/closed.tt \
	misc/message.tt \
	parts/footer.tt \
	parts/group-general.tt \
	parts/header.tt \
	parts/left-menu.tt \
	parts/tags-cloud.tt \
	parts/top-menu.tt \
	parts/user-general.tt
